Fixed Bug #43248 (backward compatibility break in realpath())